--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
         <activity
             android:screenOrientation="portrait"
-            android:name=".MenuActivity"
+            android:name=".Menu_Activity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,19 +22,19 @@
 
         <activity
             android:screenOrientation="portrait"
-            android:name=".MainActivity"
+            android:name=".Main_Activity"
             android:label="@string/app_name" >
         </activity>
 
         <activity
-            android:name=".AboutActivity"
+            android:name=".About_Activity"
             android:label="@string/title_activity_about"
-            android:parentActivityName=".MenuActivity"
+            android:parentActivityName=".Menu_Activity"
             android:theme="@android:style/Theme.Dialog"
             android:screenOrientation="portrait"  >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.vlfom.wordgraph.MenuActivity" />
+                android:value=".Menu_Activity" />
         </activity>
     </application>
 
